# MultiLang

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  adding_new_langs.md  banner.c  banner.h  get_input.c  get_input.h  get_input_cpp.cpp  get_input_cpp.h  get_input_mem.c  get_input_mem.h  get_input_mem_cpp.cpp  get_input_mem_cpp.h  greet.rs  greet_rust.h  main.c
docs/: FFI-ABI.md  adding-new-languages.md  code_execution_flow.md  size_t-usize.md  tying-it-all-together.md
src/: greet_lib.rs  lib.rs
